<resources>
    <string name="app_name">vCash</string>
    <string name="user_data">data</string>
    <string name="signin_page_phone_title">Phone number</string>
    <string name="signup_page_phone_subtitle">Please enter your phone number to continue</string>
    <string name="signup_page_btn_text">Sign up</string>
    <string name="card_number_hint">Card Number</string>
    <string name="cardholder_hint">Cardholder</string>
    <string name="cvv_hint">CVV</string>
    <string name="valid_thru">VALID THRU</string>
    <string name="login_page_info">Welcome to the world of vCash! Before you continue we want to know more about you. Fill the form below and you will be ready to go!</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_firstname_hint">Type your first name here</string>
    <string name="type_your_last_name_here">Type your last name here</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="type_your_country_here">Type your country here</string>
    <string name="type_your_city_here">Type your city here</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="open_camera">Open Camera</string>
    <string name="complete">Complete</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homefragmentName">Home</string>
    <string name="paymentsfragmentName">Payments</string>
    <string name="transferfragmentName">Transfer</string>
    <string name="title_activity_reminder_fragment">ReminderFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="reminder_note">Here are your card details. Please do NOT let anyone see this page!</string>
    <string name="currency">lei</string>
    <string name="add_money">Add money</string>
    <string name="amount_hint">Amount</string>
    <string name="add">add</string>
    <string name="send">send</string>
</resources>