<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/infoForUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/login_page_info"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/llFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoForUser"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:text="@string/signup_firstname" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            android:hint="@string/signup_firstname_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llFirstName"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:text="@string/last_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            android:hint="@string/type_your_last_name_here"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llLastName"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:text="@string/country" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            android:hint="@string/type_your_country_here"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llCountry"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="65dp"
            android:textSize="20sp"
            android:text="@string/city" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            android:hint="@string/type_your_city_here"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llCity"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:textSize="20sp"
            android:text="@string/address" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            android:hint="Type your address here"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llAddress"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/open_camera"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/selfieView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="75dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnOpenCamera"
        android:layout_above="@+id/btnComplete"
        android:src="@drawable/placeholder_user_photo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/complete"/>
</RelativeLayout>