<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homefragmentName"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabPayments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymentsfragmentName"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transferfragmentName"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"/>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:showAnimationBehavior="outward"
        app:hideAnimationBehavior="inward"
        app:indicatorDirectionCircular="clockwise"
        android:layout_centerInParent="true"/>

</RelativeLayout>