<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/metalic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:inputType="phone"
            android:maxLength="19"
            android:textSize="24sp"
            android:hint="@string/card_number_hint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardholder_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_number"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="15dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:inputType="textCapCharacters"
            android:textSize="20sp"
            android:hint="@string/cardholder_hint" />

        <TextView
            android:id="@+id/card_exprDate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_number"
            android:layout_marginHorizontal="42dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:text="@string/valid_thru"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_number"
            android:layout_marginHorizontal="53dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:text="@string/cvv_hint"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_number"
            android:layout_marginHorizontal="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="18sp"
            android:hint="@string/cvv_hint" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardExpDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_number"
            android:layout_marginHorizontal="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:inputType="date"
            android:maxLength="5"
            android:textSize="18sp"
            android:hint="MM/YY" />


    </RelativeLayout>

</merge>