<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/layoutUserDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">

                    <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ic_baseline_account_circle_24"/>

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="25dp"
                        android:textSize="20sp"
                        android:text="Firstname Lastname"/>
                </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:layout_below="@+id/layoutUserDetails">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/currency"/>

                <TextView
                    android:id="@+id/accountBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textSize="25sp"
                    android:text="200.00"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/accountAddMoneyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutBalance"
                android:layout_marginTop="25dp"
                android:textSize="16sp"
                app:icon="@drawable/ic_round_add_24"
                android:text="@string/add_money"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/addMoneyCard"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountInput"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:inputType="numberDecimal"
                    android:textSize="24sp"
                    android:hint="@string/amount_hint"
                    android:background="@null"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addMoneyBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_round_attach_money_24"
                    android:text="@string/add"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <com.carla.customViews.CreditCardView
            android:id="@+id/virtualCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>

    </RelativeLayout>
</FrameLayout>